--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
 <head>
     <title>MyQ's</title>
     <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
+    <base href="/">
 </head>
 <body>
     <div id="app"></div> 
